--- a/views/index.jade
+++ b/views/index.jade
@@ -6,10 +6,12 @@ html
         link(rel="stylesheet",href="/css/bootstrap.min.css")
         script(src="/js/bootstrap.min.js")
     body
+        row
+            h1 Runway
         form
             div.form-group
-                label(for="exampleInputEmail1" ) Email address
-                input.form-control#exampleInputEmail1(type="email" placeholder="Email")
+                label(for="nicknameInput" ) Nickname
+                input.form-control#nicknameInput(type="text" placeholder="Nickname")
             div.form-group
-                label(for="exampleInputPassword1" ) Password
-                input.form-control#exampleInputPassword1(type="password" placeholder="Password")
+                label(for="passwordInput" ) Password
+                input.form-control#passwordInput(type="password" placeholder="Password")
