--- a/views/index.jade
+++ b/views/index.jade
@@ -7,11 +7,13 @@ html
         script(src="/js/bootstrap.min.js")
     body
         row
-            h1 Runway
+            center
+                p#title Runway
+            #container.col
         form
             div.form-group
-                label(for="nicknameInput" ) Nickname
-                input.form-control#nicknameInput(type="text" placeholder="Nickname")
+                label(for="emailInput" ) Email
+                input.form-control#emailInput(type="text" placeholder="Email")
             div.form-group
                 label(for="passwordInput" ) Password
                 input.form-control#passwordInput(type="password" placeholder="Password")
