--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,5 +5,6 @@ html
         link(rel='stylesheet', href='/stylesheets/style.css')
         link(rel="stylesheet",href="/css/bootstrap.min.css")
         script(src="/js/bootstrap.min.js")
+        script(type='text/javascript', src='angular.min.js')
     body
         block content
