--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,7 +4,8 @@ html
         title= title
         link(rel='stylesheet', href='/stylesheets/style.css')
         link(rel="stylesheet",href="/css/bootstrap.min.css")
-        script(src="/js/bootstrap.min.js")
         script(type='text/javascript', src='angular.min.js')
+        script(type='text/javascript', src='jquery.min.js')
+        script(src="/js/bootstrap.min.js")
     body
         block content
