Add workspace layout, login address

--- a/views/workspace.jade
+++ b/views/workspace.jade
@@ -1,1 +1,10 @@
-doctype html
+extends layout
+
+block content
+	div.space-panel
+	div.chat-panel
+		div.users-bar
+		div.messages-panel
+		div.text-bar
+		div.tools-bar
+	div.pages-panel
