--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,6 +12,14 @@ body {
   height:100%;
 }
 
+.login-form {
+	margin-top: 30px;
+ 	margin-left: 400px;
+	margin-right: 400px;
+	padding: 100px;
+    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+}
+
 .space-panel {
 	position:relative;
 	float:left;
