--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-    form
+    form.login-form
         div.form-group
             label(for="exampleInputEmail1" ) Email address
             input.form-control#exampleInputEmail1(type="email" placeholder="Email")
