--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,5 +7,6 @@ html
         script(type='text/javascript', src='angular.min.js')
         script(type='text/javascript', src='jquery.min.js')
         script(src="/js/bootstrap.min.js")
+        block scripts
     body
         block content
