--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,22 +1,30 @@
 #title {
-	font-size: 60px;
+	font-size: 70px;
+    font-family: myFirstFont;
 }
 
-div {
-  
+@font-face {
+   font-family: myFirstFont;
+   src: url(/fonts/Zapfino.ttf);
 }
 
 body {
   position:absolute;
   width:100%;
   height:100%;
+  padding: 100px;
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background: url(/images/background.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 .login-form {
-	margin-top: 30px;
+	margin-top: 370px;
  	margin-left: 400px;
 	margin-right: 400px;
-	padding: 100px;
     font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
