--- a/views/index.jade
+++ b/views/index.jade
@@ -1,9 +1,12 @@
 extends layout
 
 block content
+
+    center
+        p#title Runway
     form.login-form
         div.form-group
-            label(for="exampleInputEmail1" ) Email address
+            label(for="exampleInputEmail1" ) Email Address
             input.form-control#exampleInputEmail1(type="email" placeholder="Email")
         div.form-group
             label(for="exampleInputPassword1" ) Password
