--- a/views/messages.jade
+++ b/views/messages.jade
@@ -1,3 +1,11 @@
 extends layout
 
 block content
+    script(type='text/javascript' src='/javascripts/messages.js')
+    div(ng-app='messagesApp')
+        div(ng-controller='messagesController')
+            table
+                tbody(ng-repeat='message in messages')
+                    tr
+                        td(ng-bind='message.user')
+                        td(ng-bind='message.content')
