--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,6 +3,11 @@
     font-family: myFirstFont;
 }
 
+div {
+	position: relative;
+	height:100%;
+}
+
 @font-face {
    font-family: myFirstFont;
    src: url(/fonts/Zapfino.ttf);
@@ -12,7 +17,6 @@ body {
   position:absolute;
   width:100%;
   height:100%;
-  padding: 100px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   background: url(/images/background.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
@@ -22,6 +26,7 @@ body {
 }
 
 .login-form {
+	padding: 100px;
 	margin-top: 370px;
  	margin-left: 400px;
 	margin-right: 400px;
@@ -34,6 +39,10 @@ body {
 	height: 100%;
 	width: 75%;
 	background-color: #333;
+}
+
+.space-content {
+	position: absolute;
 }
 
 .chat-panel {
