--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,3 @@
-#title {
-	font-size: 70px;
-    font-family: myFirstFont;
-}
-
 div {
 	position: relative;
 	height:100%;
@@ -25,11 +20,19 @@ body {
   background-size: cover;
 }
 
+#title-text {
+    font-size: 70px;
+    font-family: myFirstFont;
+}
+
+.title{
+
+}
+
 .login-form {
-	padding: 100px;
-	margin-top: 370px;
- 	margin-left: 400px;
-	margin-right: 400px;
+	margin-top: 75%;
+ 	margin-left: 30%;
+	margin-right: 30%;
     font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
