--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,5 @@
 div {
 	position: relative;
-	height:100%;
 }
 
 @font-face {
@@ -21,18 +20,24 @@ body {
 }
 
 #title-text {
+    text-align:center;
+    width:100%;
+    margin:auto;
     font-size: 70px;
     font-family: myFirstFont;
 }
 
 .title{
-
+    position:absolute;
+    margin-top:100px;
+    height:20%;
+    width:100%
 }
 
 .login-form {
-	margin-top: 75%;
- 	margin-left: 30%;
-	margin-right: 30%;
+    top:75%;
+ 	margin-left: 35%;
+	margin-right: 35%;
     font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
