--- a/views/test.jade
+++ b/views/test.jade
@@ -3,4 +3,5 @@ block scripts
     script(src="/javascripts/test.js")
     link(rel="stylesheet" href="/stylesheets/test.css")
 block content
-    div#dropzone Drop files here
+    div#dropzone
+        h1#dndText Drag and drop files here
