--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -35,9 +35,10 @@ body {
 }
 
 .login-form {
-    top:75%;
- 	margin-left: 35%;
-	margin-right: 35%;
+    position:absolute;
+    bottom:10px;
+ 	left: 35%;
+	right: 35%;
     font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
@@ -95,4 +96,9 @@ body {
 	height:24px;
 	width:100%;
 	background-color:#555;
+}
+
+.fill {
+    height:100%;
+    width:100%;
 }
