--- a/views/workspace.jade
+++ b/views/workspace.jade
@@ -5,8 +5,8 @@ block scripts
     link(rel="stylesheet" herf="/stylesheets/workspaceDND.css")
 
 block content
-    div(ng-app="workspaceApp")
-        div(ng-controller="workspaceController")
+    div.fill(ng-app="workspaceApp")
+        div.fill(ng-controller="workspaceController")
             div.space-panel#dropzone
                 h1#dndText Drag and drop files here
             div.chat-panel
