--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,7 +12,7 @@ body {
   width:100%;
   height:100%;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  background: url(/images/background.jpg) no-repeat center center fixed; 
+  background: url(/images/background.png) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -30,6 +30,21 @@ body {
 .title{
     position:absolute;
     margin-top:100px;
+    height:20%;
+    width:100%
+}
+
+#subtitle-text {
+    text-align:center;
+    width:100%;
+    margin:auto;
+    font-size: 24px;
+    font-family: myFirstFont;
+}
+
+.subtitle{
+    position:absolute;
+    margin-top:501px;
     height:20%;
     width:100%
 }
