--- a/views/login.jade
+++ b/views/login.jade
@@ -14,4 +14,4 @@ block content
                 div.form-group
                     label(for="passwordInput" ) Password
                     input.form-control#passwordInput(type="password" ng-model="user.password" placeholder="Password")
-                input.btn.btn-primary(type="submit" value="Login")
+                input.btn.btn-primary(type="submit" value="Sign in")
