--- a/views/index.jade
+++ b/views/index.jade
@@ -10,3 +10,4 @@ block content
             div.form-group
                 label(for="exampleInputPassword1" ) Password
                 input.form-control#exampleInputPassword1(type="password" placeholder="Password")
+            input.btn.btn-primary#signin(type="submit" value="Sign in")
