--- a/views/workspace.jade
+++ b/views/workspace.jade
@@ -2,18 +2,21 @@ extends layout
 block scripts
     script(type='text/javascript' src='/javascripts/workspaceApp.js')
     script(type='text/javascript' src='/javascripts/workspaceDND.js')
-    link(rel="stylesheet" href="/stylesheets/workspace.css")
+    script(type='text/javascript' src='/javascripts/workspace.js')
+    link(rel="stylesheet" herf="/stylesheets/workspaceDND.css")
 
 block content
+
     div.fill(ng-app="workspaceApp")
         div.space-panel#dropzone(ng-controller="workspaceController")
             h1#dndText Drag and drop files here
         div.chat-panel(ng-controller='messagesController')
             div.users-bar
+                input#hide-btn(type="button" value="Hide" )
             div.messages-panel
                 div.row(ng-repeat='message in messages')
                     div.col-xs-4(ng-bind='message.user')
-                    div.col-xs-8.chatMessage(ng-bind='message.content')
+                    div.col-xs-8(ng-bind='message.content')
             div.text-bar
                 form(ng-submit='addComment()')
                     input(type='text', ng-model='newComment' placeholder='message' required)
