--- a/public/stylesheets/test.css
+++ b/public/stylesheets/test.css
@@ -1,10 +1,84 @@
-#dropzone{
-    border: 2px solid black;
+.chatMessage{
     border-radius: 5px;
-    width:100%;
-    height:100%;
+    margin-top: 5px;
+    background-color: #d9edf7;
+}
+.space-panel {
+    position:relative;
+    float:left;
+    border: 2px solid black;
     text-align: center;
+    height: 100%;
+    width: 75%;
+    background-color: #333;
+}
+#dndText{
+    color:black;
 }
 #dropzone.hover{
     border-color:red;
+}
+.space-content {
+    position: absolute;
+}
+
+.chat-panel {
+    position:relative;
+    float:right;
+    height: 100%;
+    width: 25%;
+}
+
+.users-bar {
+    position:absolute;
+    top:0px;
+    height:48px;
+    width:100%;
+    background-color:#222;
+}
+
+.messages-panel {
+    position:absolute;
+    bottom:72px;
+    top:48px;
+    width:100%;
+    background-color:#CCC;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+.text-bar {
+    position:absolute;
+    bottom:24px;
+    height:48px;
+    width:100%;
+    background-color:#777;
+}
+
+.tools-bar {
+    position:absolute;
+    bottom:0px;
+    height:24px;
+    width:100%;
+    background-color:#555;
+}
+
+.fill {
+    height:100%;
+    width:100%;
+}
+
+#hide-btn {
+    border: none;
+    background-color: transparent;
+    color: #888;
+    font-size:14px;
+    font-weight:bold;
+    height: 48px;
+    line-height:16px;
+    padding: 16px;
+}
+
+#hide-btn:hover{
+    background-color:#5d176a;
 }
