--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,9 +4,12 @@ html
         title= title
         link(rel='stylesheet', href='/stylesheets/style.css')
         link(rel="stylesheet",href="/css/bootstrap.min.css")
+
         script(type='text/javascript', src='angular.min.js')
         script(type='text/javascript', src='jquery.min.js')
-        script(src="/js/bootstrap.min.js")
+        script(type='text/javascript' src="/js/bootstrap.min.js")
+        script(type='text/javascript' src='jquery-ui.js')
+        
         block scripts
     body
         block content
