various stuff - front and back

--- a/public/stylesheets/workspace.css
+++ b/public/stylesheets/workspace.css
@@ -16,8 +16,23 @@
 #dropzone.hover{
     border-color:red;
 }
+
 .space-content {
     position: absolute;
+}
+
+#un-hide-btn {
+    position: absolute;
+    top: 0;
+    right: 0;
+    border: none;
+    background-color:#222;
+    color: #888;
+    font-size:14px;
+    font-weight:bold;
+    height: 48px;
+    line-height:16px;
+    padding: 16px;
 }
 
 .chat-panel {
@@ -77,6 +92,6 @@
     padding: 16px;
 }
 
-#hide-btn:hover{
+#hide-btn:hover, #un-hide-btn:hover {
     background-color:#5d176a;
 }
