--- a/views/workspace.jade
+++ b/views/workspace.jade
@@ -20,6 +20,6 @@ block content
                         div.col-xs-8.chatMessage(ng-bind='message.content')
                 div.text-bar
                     form(ng-submit='addComment()')
-                        input(type='text' ng-model='newComment' ng-change='validateNewComment()' placeholder='message')
+                        input(type='text' ng-model='newComment' placeholder='message')
                 div.tools-bar
         //- div.pages-panel
