remove jquery-ui index.html at root

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,7 +8,7 @@ html
         script(type='text/javascript', src='angular.min.js')
         script(type='text/javascript', src='jquery.min.js')
         script(type='text/javascript' src="/js/bootstrap.min.js")
-        script(type='text/javascript' src='jquery-ui.js')
+        script(type='text/javascript' src='/jquery-ui-bundle/jquery-ui.js')
         
         block scripts
     body
