--- a/public/stylesheets/workspace.css
+++ b/public/stylesheets/workspace.css
@@ -10,7 +10,7 @@
 #dndText {
     position:absolute;
     width: 100%;
-    top:50%;
+    top: 50%;
     margin-top: -28px;
     line-height: 55px;
     font-size: 55px;
@@ -40,6 +40,9 @@
 }
 
 .chat-panel {
+    border-style: solid;
+    border-width: 0px 0px 0px 1px;
+    border-color: #000000;
     position: relative;
     float: right;
     height: 100%;
