--- a/public/stylesheets/workspace.css
+++ b/public/stylesheets/workspace.css
@@ -42,7 +42,7 @@
 .chat-panel {
     border-style: solid;
     border-width: 0px 0px 0px 1px;
-    border-color: #000000;
+    border-color: #ffaf10;
     position: relative;
     float: right;
     height: 100%;
