--- a/views/test.jade
+++ b/views/test.jade
@@ -9,6 +9,7 @@ block content
     div.fill(ng-app="workspaceApp")
         div.space-panel#dropzone(ng-controller="workspaceController")
             h1#dndText Drag and drop files here
+            img#img
         div.chat-panel(ng-controller='messagesController')
             div.users-bar
                 input#hide-btn(type="button" value="Hide" )
