--- a/public/stylesheets/workspace.css
+++ b/public/stylesheets/workspace.css
@@ -47,6 +47,7 @@
     float: right;
     height: 100%;
     width: 25%;
+    overflow: visible;
 }
 
 .users-bar {
@@ -58,6 +59,7 @@
 }
 
 .messages-panel {
+    overflow: visible;
     position: absolute;
     bottom: 48px;
     top: 48px;
@@ -71,19 +73,7 @@
     height: 48px;
     width: 100%;
 }
-
-.user {
-    color: #ffffff;
-    font-size: 5px;
-    text-align: center;
-    line-height: 30px;
-    border-radius: 100px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    background-color: #bfbfbf;
-    word-wrap: break-word;
-}
-
+    
 .chatMessage {
     line-height: 25px;
     border-radius: 5px;
@@ -107,6 +97,7 @@
 }
 
 .fill {
+    overflow: visible;
     height:100%;
     width:100%;
 }
@@ -124,4 +115,83 @@
 
 #hide-btn:hover, #un-hide-btn:hover {
     background-color: #5d176a;
+}
+
+.user {
+    color: #ffffff;
+    font-size: 5px;
+    text-align: center;
+    line-height: 30px;
+    border-radius: 100px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    background-color: #bfbfbf;
+    word-wrap: break-word;
+   -webkit-transform: translateZ(0); /* webkit flicker fix */
+   -webkit-font-smoothing: antialiased; /* webkit text rendering fix */
+}
+
+.user .tooltip {
+  text-align: center;
+  background: #1496bb;
+  top: -50px;
+  color: #fff;
+  display: block;
+  margin-left: -290%;
+  margin-bottom: 15px;
+  opacity: 0;
+  padding: 10px;
+  pointer-events: none;
+  position: absolute;
+  width: 600%;
+  -webkit-transform: translateY(10px);
+     -moz-transform: translateY(10px);
+      -ms-transform: translateY(10px);
+       -o-transform: translateY(10px);
+          transform: translateY(10px);
+  -webkit-transition: all .25s ease-out;
+     -moz-transition: all .25s ease-out;
+      -ms-transition: all .25s ease-out;
+       -o-transition: all .25s ease-out;
+          transition: all .25s ease-out;
+  -webkit-box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28);
+     -moz-box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28);
+      -ms-box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28);
+       -o-box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28);
+          box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28);
+}
+
+/* This bridges the gap so you can mouse into the tooltip without it disappearing */
+.user .tooltip:before {
+  bottom: -20px;
+  content: " ";
+  display: block;
+  height: 20px;
+  left: 0;
+  position: absolute;
+  width: 100%;
+}  
+
+/* CSS Triangles - see Trevor's post */
+.user .tooltip:after {
+  border-left: solid transparent 10px;
+  border-right: solid transparent 10px;
+  border-top: solid #1496bb 10px;
+  bottom: -10px;
+  content: " ";
+  height: 0;
+  left: 50%;
+  margin-left: -13px;
+  position: absolute;
+  width: 0;
+}
+  
+.user:hover .tooltip {
+  opacity: 1;
+  pointer-events: auto;
+  -webkit-transform: translateY(0px);
+     -moz-transform: translateY(0px);
+      -ms-transform: translateY(0px);
+       -o-transform: translateY(0px);
+          transform: translateY(0px);
 }
