--- a/views/workspace.jade
+++ b/views/workspace.jade
@@ -17,10 +17,11 @@ block content
                 div.messages-panel
                     div.row(ng-repeat='message in messages')
                         div.col-xs-1
-                        div.col-xs-1.user(ng-bind='message.user')
+                        div.col-xs-1.user {{message.user}}
+                            div.tooltip(ng-bind='message.user')
                         div.col-xs-7.chatMessage
                             span#chat(ng-bind='message.content')
-                        div.col-xs-2
+                        div.col-xs-3
                 div.text-bar
                     form(ng-submit='addComment()')
                         input#messagebox(type='text' ng-model='newComment' placeholder='  Type a message..')
