--- a/views/index.jade
+++ b/views/index.jade
@@ -3,12 +3,13 @@ extends layout
 block content
     script(type='text/javascript' src='/javascripts/authApp.js')
     div.login-form(ng-app="authApp")
+        p.text-warning {{error_message}}
         div(ng-controller="authController")
             form.form-auth(ng-submit="login()")
                 div.form-group
-                    label(for="exampleInputEmail1" ) Email Address
-                    input.form-control#exampleInputEmail1(type="email" placeholder="Email")
+                    label(for="exampleInputEmail1" ) Username
+                    input.form-control#exampleInputEmail1(type="username" ng-model="user.username" placeholder="Username")
                 div.form-group
                     label(for="exampleInputPassword1" ) Password
-                    input.form-control#exampleInputPassword1(type="password" placeholder="Password")
+                    input.form-control#exampleInputPassword1(type="password" ng-model="user.password" placeholder="Password")
                 input.btn.btn-primary#signin(type="submit" value="Sign in")
