--- a/views/workspace.jade
+++ b/views/workspace.jade
@@ -5,23 +5,23 @@ block scripts
     link(rel='stylesheet' href='/stylesheets/workspace.css')
 
 block content
-
     div.fill(ng-app='workspaceApp')
-        div.space-panel#dropzone(ng-controller='workspaceController')
-            h1#dndText Drag and drop files here
         div.fill(ng-controller='messagesController')
-            input#un-hide-btn(type='button' value='Show' ng-hide='chatVisible' ng-click='showChat()')
-            div.chat-panel(ng-show='chatVisible')
-                div.users-bar
-                    input#hide-btn(type='button' value='Hide' ng-click='hideChat()')
-                div.messages-panel#msgpanel(onscroll='updateScrollState()')
-                    div.row(ng-repeat='message in messages')
-                        div.col-xs-1
-                        div.col-xs-1.user {{message.user}}
-                            div.tooltip(ng-bind='message.user')
-                        div.col-xs-7.chatMessage
-                            span#chat(ng-bind='message.content')
-                        div.col-xs-3
-                div.text-bar
-                    form(ng-submit='addComment()')
-                        input#messagebox(type='text' ng-model='newComment' placeholder='  Type a message..')
+            div.space-panel#dropzone(ng-controller='workspaceController')
+                h1#dndText Drag and drop files here
+            div.right-panel
+                input#un-hide-btn(type='button' value='Show' ng-hide='chatVisible' ng-click='showChat()')
+                div.chat-panel(ng-show='chatVisible')
+                    div.users-bar
+                        input#hide-btn(type='button' value='Hide' ng-click='hideChat()')
+                    div.messages-panel#msgpanel(onscroll='updateScrollState()')
+                        div.row(ng-repeat='message in messages')
+                            div.col-xs-1
+                            div.col-xs-1.user {{message.user}}
+                                div.tooltip(ng-bind='message.user')
+                            div.col-xs-7.chatMessage
+                                span#chat(ng-bind='message.content')
+                            div.col-xs-3
+                    div.text-bar
+                        form(ng-submit='addComment()')
+                            input#messagebox(type='text' ng-model='newComment' placeholder='  Type a message..')
