--- a/public/stylesheets/workspace.css
+++ b/public/stylesheets/workspace.css
@@ -17,6 +17,15 @@
     color: #e6e6e6;
 }
 
+.noselect {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 #dropzone.hover{
     border-color: red;
 }
