--- a/views/workspace.jade
+++ b/views/workspace.jade
@@ -20,7 +20,7 @@ block content
                             div.tooltip(ng-bind='message.user')
                         div.col-xs-7.chatMessage
                             span#chat(ng-bind='message.content')
-                        div.col-xs-3
+                        button.col-xs-3.btn.btn-primary(type="button" onclick="buttonClicked(this);" ) Add to workspace
                 div.text-bar
                     form(ng-submit='addComment()')
                         input#messagebox(type='text' ng-model='newComment' placeholder='  Type a message..')
