--- a/views/workspace.jade
+++ b/views/workspace.jade
@@ -18,9 +18,9 @@ block content
                         div.col-xs-1
                         div.col-xs-1.user {{message.user}}
                             div.tooltip(ng-bind='message.user')
-                        div.col-xs-5.chatMessage
+                        div.col-xs-8.chatMessage
                             span#chat(ng-bind='message.content')
-                        button.col-xs-4.btn.btn-primary(type="button" onclick="buttonClicked(this);" ) Add to workspace
+                        button.col-xs-1.btn.btn-primary(type="button" onclick="buttonClicked(this);" ) +
                 div.text-bar
                     form(ng-submit='addComment()')
                         input#messagebox(type='text' ng-model='newComment' placeholder='  Type a message..')
