big cleanup 2, moved models into their own files, split up routers, removed unused view

--- a/views/index.jade
+++ b/views/index.jade
@@ -3,7 +3,7 @@ extends layout
 block content
     script(type='text/javascript' src='/javascripts/authApp.js')
     div.login-form(ng-app="authApp")
-        p.text-warning {{error_message}}
+        //- p.text-warning {{error_message}}
         div(ng-controller="authController")
             form.form-auth(ng-submit="login()")
                 div.form-group
