--- a/views/login.jade
+++ b/views/login.jade
@@ -7,11 +7,11 @@ block content
             H1= title
             form.form-auth(action="/login" method="post")
                 div.form-group
-                    label(for="exampleInputEmail1" ) Username
-                    input.form-control#exampleInputEmail1(type="text" name="email" placeholder="Username" autofocus)
+                    label(for="loginUsername" ) Username
+                    input.form-control#loginUsername(type="text" name="username" placeholder="Username" autofocus)
                 div.form-group
-                    label(for="exampleInputPassword1" ) Password
-                    input.form-control#exampleInputPassword1(type="password" name="password" placeholder="Password")
+                    label(for="loginPassword" ) Password
+                    input.form-control#loginPassword(type="password" name="password" placeholder="Password")
                 div.form-group
                     p.col-xs-7 Need an account?
                         a(href="register")  Signup
