--- a/views/register.jade
+++ b/views/register.jade
@@ -8,7 +8,7 @@ block content
             form.form-auth(action="/register" method="post")
                 div.form-group
                     label(for="registerUsername" ) Username
-                    input.form-control#registerUsername(type="text" name="email" placeholder="Username" autofocus)
+                    input.form-control#registerUsername(type="text" name="username" placeholder="Username" autofocus)
                 div.form-group
                     label(for="registerPassword") Password
                     input.form-control#registerPassword(type="password" name="password" placeholder="Password")
