added useer feedback with login and register errors

--- a/views/login.jade
+++ b/views/login.jade
@@ -5,6 +5,8 @@ block content
     div.login-form(ng-app="authApp")
         div(ng-controller="authController")
             H1= title
+            if message.length > 0
+                p.alert.alert-danger=message
             form.form-auth(action="/login" method="post")
                 div.form-group
                     label(for="loginUsername" ) Username
@@ -14,5 +16,5 @@ block content
                     input.form-control#loginPassword(type="password" name="password" placeholder="Password")
                 div.form-group
                     p.col-xs-7 Need an account?
-                        a(href="register")  Signup
+                        a(href="register") Signup
                     input.btn.btn-primary.col-xs-4#signin(type="submit" value="Sign In")
