--- a/views/register.jade
+++ b/views/register.jade
@@ -5,6 +5,8 @@ block content
     div.login-form(ng-app="authApp")
         div(ng-controller="authController")
             H1= title
+            if message.length > 0
+                p.alert.alert-danger=message
             form.form-auth(action="/register" method="post")
                 div.form-group
                     label(for="registerUsername" ) Username
@@ -14,5 +16,5 @@ block content
                     input.form-control#registerPassword(type="password" name="password" placeholder="Password")
                 div.form-group
                     p.col-xs-7 Already have an account?
-                        a(href="login")  Login
+                        a(href="login") Login
                     input.btn.btn-primary.col-xs-4#signin(type="submit" value="Register")
