--- a/views/workspace.jade
+++ b/views/workspace.jade
@@ -1,14 +1,13 @@
 extends layout
 block scripts
     script(type='text/javascript' src='/javascripts/workspaceApp.js')
-    script(type='text/javascript' src='/javascripts/workspaceDND.js')
     script(type='text/javascript' src='/socket.io.js')
     link(rel='stylesheet' href='/stylesheets/workspace.css')
 
 block content
     div.fill(ng-app='workspaceApp' ng-init="username='#{username}'")
-        div.fill(ng-controller='messagesController')
-            div.space-panel#dropzone(ng-controller='workspaceController')
+        div.fill(ng-controller='workspaceController')
+            div.space-panel#dropzone
                 h1.noselect#dndText Drag and drop files here
             input#un-hide-btn(type='button' value='Show' ng-hide='chatVisible' ng-click='showChat()')
             div.chat-panel(ng-show='chatVisible')
@@ -21,8 +20,8 @@ block content
                             div.tooltip {{message.user}}
                         div.col-xs-7.chatMessage
                             span#chat(ng-bind='message.content')
-                        button.col-xs-1.btn.btn-primary(type='button' onclick='buttonClicked(this);') +
+                        button.col-xs-1.btn.btn-primary(type='button' ng-click='buttonClicked(message.content)') +
                         button.col-xs-1.btn.btn-primary(type='button' ng-if='message.user === username' ng-click='removeMessage(message.timestamp)') x
                 div.text-bar
                     form(ng-submit='sendMessage()')
-                        input#messagebox(type='text' ng-model='newMessage' placeholder='  Type a message..' autofocus)
+                        input#messagebox(type='text' ng-model='newMessage' placeholder='  Type a message...' autofocus)
