--- a/views/workspace.jade
+++ b/views/workspace.jade
@@ -1,7 +1,7 @@
 extends layout
 block scripts
     script(type='text/javascript' src='/javascripts/workspaceApp.js')
-    script(type='text/javascript' src='/socket.io.js')
+    script(type='text/javascript' src='/socket.io/socket.io.js')
     link(rel='stylesheet' href='/stylesheets/workspace.css')
 
 block content
